# MCBS913_Image_Project

./: README.md  Week_03_02.md  deepthought.py  deepthought.tcss  deepthought_tui.py  testing.py
Weekly Tasks/: Week_03_02.md
image_proj/logs/: experiment_results_20250423_224704.csv
image_proj/prompts/: prompt1.json  prompt2_olddata.json
image_proj/source/: cell_morphology_analyzer.py  conversation.py  deepthought.py  preprocessor.py  rag.py  testing.py  utils.py
image_proj/source/database/: ground_truth.json  rag_db_2.json  rag_db_facts_tagged.json
submission/: README.md
submission/code/image_proj/: pyproject.toml
submission/code/image_proj/logs/: sweep_results_20250515_202149.csv  sweep_results_20250515_210216.csv  sweep_results_20250515_214126.csv  sweep_results_20250515_222717.csv  sweep_results_20250515_225706.csv  sweep_results_20250515_234904.csv  sweep_results_20250516_002405.csv  sweep_results_20250516_072908.csv
submission/code/image_proj/source/: cell_morphology_analyzer.py  rag.py  utils.py
submission/code/image_proj/source/database/: rag_db.db  rag_db_2.db  rag_db_facts.json  rag_db_tagged.db
submission/data for paper/: sweep_results_from_paper.csv
submission/paper/: Cell_Morphology_Analyzer_Paper.docx
